--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "^4.1.15",
-    "typescript": "3.4.5"
+    "tslint": "^5.16.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "eslintConfig": {
     "extends": "react-app"
