--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
     "@types/jest": "24.0.13",
@@ -18,6 +19,7 @@
     "@types/react-redux": "^7.0.9",
     "@types/rebass__grid": "^6.0.5",
     "@types/redux": "^3.6.0",
+    "@types/seamless-immutable": "^7.1.10",
     "@types/styled-components": "^4.1.15",
     "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
